@@ -8,6 +8,8 @@ bzr-svn 0.5.0					UNRELEASED
 
    * Fixed handling of password prompting with username specified. (#275953)
 
+   * Use most appropriate mapping when setting tags for a branch. (#322856)
+
   FEATURES
 
    * Added basic implemention of "bzr check" on Subversion
